# LArRecoND

./: CMakeLists.txt  Makefile  README.md
.github/actions/build-pandora/: action.yml
.github/actions/setup-env/: action.yml
.github/actions/setup-externals/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: main.yml
include/: CheatingConfigurableVertexCreationAlgorithm.h  CheatingEventSlicingThreeDTool.h  CheatingRockMuonRemovalAlgorithm.h  CheatingRockMuonTaggingTool.h  CheatingStitchingTool.h  EventSlicingThreeDBaseTool.h  EventSlicingThreeDTool.h  HierarchyAnalysisAlgorithm.h  LArNDGeomSimple.h  LArRecoNDFormat.h  LArSP.h  MasterThreeDAlgorithm.h  PandoraInterface.h  PandoraOuterface.h  PrintCurrentPfoInfoAlgorithm.h  RockMuonTaggingTool.h  SlicingThreeDAlgorithm.h
ndlarflow/: h5_to_root_ndlarflow.py  rootToRootConversion.C
scripts/: build.sh  buildDLVtx.sh  buildEDepSimDLVtx.sh  tags.sh
settings/: PandoraSettings_Cosmic_Standard_ThreeD.xml  PandoraSettings_Cosmic_Standard_ThreeD_cheated.xml  PandoraSettings_LArRecoND_RockMuon_Cheat.xml  PandoraSettings_LArRecoND_ThreeD.xml  PandoraSettings_LArRecoND_ThreeD_Cheated.xml  PandoraSettings_LArRecoND_ThreeD_DLVtx.xml  PandoraSettings_LArRecoND_ThreeD_Merged.xml  PandoraSettings_LArRecoND_ThreeD_PartialCheated.xml  PandoraSettings_LArRecoND_ThreeD_cheated_w_rockmuTagging.xml  PandoraSettings_Neutrino_ThreeD.xml  PandoraSettings_Neutrino_ThreeD_Cheated.xml  PandoraSettings_Neutrino_ThreeD_DLVtx.xml  PandoraSettings_Neutrino_ThreeD_Merged.xml  PandoraSettings_Outerface_Voxelize.xml  PandoraSettings_Slicing_ThreeD.xml  PandoraSettings_Slicing_ThreeD_Merged.xml
settings/development/: PandoraSettings_LArRecoND_RockMuon_Cheat.xml  PandoraSettings_LArRecoND_ThreeD_Cheated.xml  PandoraSettings_LArRecoND_ThreeD_PartialCheated.xml  PandoraSettings_Neutrino_ThreeD_Cheated.xml  PandoraSettings_Slicing_ThreeD_Cheated.xml
src/: CheatingConfigurableVertexCreationAlgorithm.cc  CheatingEventSlicingThreeDTool.cc  CheatingRockMuonRemovalAlgorithm.cc  CheatingRockMuonTaggingTool.cc  CheatingStitchingTool.cc  CreateTwoDClustersFromThreeDAlgorithm.cc  HierarchyAnalysisAlgorithm.cc  LArNDContent.cc  MasterThreeDAlgorithm.cc  PrintCurrentPfoInfoAlgorithm.cc  RockMuonTaggingTool.cc  SimpleClusterCreationThreeDAlgorithm.cc  SlicingThreeDAlgorithm.cc
test/: PandoraInterface.cxx  PandoraOuterface.cxx
validation/: compareHierarchy.py  hierarchyPlots.py
